@@ -106,7 +106,7 @@ some other, more clever mechanism. */
 
     if(!signature)
     {
-        signature = STMethodSignatureForSelector(sel);
+        signature = STConstructMethodSignatureForSelector(sel);
     }
 
     return signature;
