@@ -112,7 +112,7 @@
 
     if(!signature)
     {
-        signature = STMethodSignatureForSelector(sel);
+        signature = STConstructMethodSignatureForSelector(sel);
     }
 
     return signature;
